doc/0.31/_sources/reference/put-ad-id-status.txt
.. index:: PUT /ad/{id}/status
.. _put_ad_id_status:

PUT /ad/{id}/status
===================

This URL updates the status of the ad with the given ``id``. If the ad does
not exist or does not belong to the user the server returns **404 Not Found**.
If the ``id`` is invalid, i.e. not a positive integer the server returns **400
Bad Request**.

To set the new status append it to the base url. The status can be one of the
user controlled status values as defined in :doc:`ad-status`.

Changing the status to **ACTIVE** also changes the number of active
ads in this category for this user. If the current number of active ads
for this user in this category exceeds ``maxNumberOfActiveAds`` as defined
in the category then an error is returned. Setting a different status
than **ACTIVE** is always allowed.

=======
Example
=======

.. code-block :: http

    PUT /ad/42/status/PAUSED

==========
Parameters
==========

None

======
Errors
======

====================    ====    =======================     ==============================================================================
Field                   Code    Error message               Description
====================    ====    =======================     ==============================================================================
id                      2001    invalid argument            not a valid number
status                  2001    invalid argument            must be either *ACTIVE*, *PAUSED* or *DELETED*
====================    ====    =======================     ==============================================================================
